nullaway_error_6C5D6A5D-9D7D-4508-AF0C-102E7279D897.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/converter/json/AbstractJackson2HttpMessageConverter.java:332: error: [NullAway] dereferenced expression cause.getMessage() is @Nullable
		boolean debugLevel = (cause instanceof JsonMappingException && cause.getMessage().startsWith("Cannot find"));
		                                                                                 ^
    (see http://t.uber.com/nullaway )
